# resolute

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  backtest_ref.py  docker-compose.yml  verify_strategies.py
backtest/: __init__.py  adapter.py  bias_engine.py  config.py  data_utils.py  fast_strategies.py  multi_runner.py  optimizer.py  reporting.py  runner.py
backtest_engine/: Cargo.toml  pyproject.toml
backtest_engine/src/: data.rs  engine.rs  indicators.rs  lib.rs  types.rs
config/: base.yaml  strategies.yaml
frontend/: .env.example  Dockerfile  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/hooks/: useAuth.ts  usePositions.ts  useWebSocket.ts
frontend/src/lib/: api.ts  auth.ts  bias-indicators.ts  constants.ts  formatters.ts  websocket.ts
frontend/src/stores/: authStore.ts  liveDataStore.ts  (+1 more)
scripts/: seed_demo_data.sql
services/auth_service/: Dockerfile  db.py  main.py  requirements.txt
services/dashboard_api/: Dockerfile  __init__.py  db.py  main.py  requirements.txt  socketio_server.py  worker_bootstrap.py
services/feed_gateway/: Dockerfile  config.yaml  go.mod  go.sum
services/order_router/: Dockerfile  go.mod  go.sum
services/signal_engine/: Dockerfile  db.py  main.py  nats_client.py  requirements.txt
services/user_worker_pool/: Dockerfile  capital_tier.py  db.py  main.py  nats_client.py  requirements.txt
shared/proto/: order.proto  signal.proto  tick.proto
shared/schema/: 002_strategy_instances.sql  timescaledb_init.sql
(+169 files in other folders)
