[package]
name = "backtest_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "backtest_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
numpy = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
chrono = { version = "0.4", features = ["serde"] }

[features]
extension-module = ["pyo3/extension-module"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
