[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "backtest_engine"
version = "0.1.0"
requires-python = ">=3.12"
description = "Rust-powered backtesting engine for Resolute"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "backtest_engine"
